test/errors/E005.m3
MODULE E005;

BEGIN

 i := 5; <*ERROR 005*>

END E005.
